--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,4 +28,7 @@
     <string name="enter">입장하기</string>
     <string name="edit">수정</string>
     <string name="delete">삭제</string>
+    <string name="popular">인기순</string>
+    <string name="recent">최신순</string>
+
 </resources>
