--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,5 +30,8 @@
     <string name="delete">삭제</string>
     <string name="popular">인기순</string>
     <string name="recent">최신순</string>
+    <string name="title">제목</string>
+    <string name="content">내용</string>
+    <string name="chapter">순서</string>
 
 </resources>
