--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,5 +34,17 @@
     <string name="input_content">강의 내용을 입력하세요.</string>
     <string name="choose_week">가능 요일 선택</string>
     <string name="monday">월</string>
+    <string name="tuesday">화</string>
+    <string name="wednesday">수</string>
+    <string name="thursday">목</string>
+    <string name="friday">금</string>
+    <string name="saturday">토</string>
+    <string name="sunday">일</string>
+    <string name="choose_date">날짜 선택</string>
+    <string name="start">시작</string>
+    <string name="end">종료</string>
+    <string name="time">시간</string>
+    <string name="tilde">~</string>
+    <string name="default_time">00:00</string>
 
 </resources>
