S11P12D210-35 Fix: 결합 에러 수정

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,6 +33,12 @@
     <string name="title">제목</string>
     <string name="content">내용</string>
     <string name="chapter">순서</string>
+    <string name="choose_week">가능 요일 선택</string>
+    <string name="choose_date">날짜 선택</string>
+    <string name="start">시작</string>
+    <string name="end">종료</string>
+    <string name="input_content">강의 내용을 입력하세요.</string>
+    <string name="lecture_title">강의 제목</string>
 
     <!-- 필터 시작 -->
     <string name="align">정렬</string>
