--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -72,6 +72,7 @@
     <string name="one_to_one">1:1</string>
     <string name="one_to_multiple">1:多</string>
     <string name="class_method">수업 방식</string>
+    <string name="notice">공지사항</string>
     <!-- 필터 끝 -->
 
 </resources>
