S11P12D210-14 Feat : 녹화강의생성 UI, 생성한 chapter 삭제 가능하도록 구현

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,7 +46,7 @@
     <string name="lecture_info">강의소개를 작성하세요.</string>
     <string name="small_title_info">소제목을 작성하세요.</string>
     <string name="chapter_info">챕터의 소개를 작성하세요.</string>
-    <string name="click_info">클릭해서 챕터 추가하기</string>
+    <string name="add_chapter">+챕터 추가+</string>
     <string name="click_thumbnail_info">클릭해서 썸네일을 추가하세요</string>
     <string name="click_video_info">클릭해서 영상을 추가하세요</string>
 
