S11P12D210-18-3-5 feat: 1. 리스트 빈 화면 만듦 2. 바텀 네비 아래 빈공간 색칠 3. 바텀네비와 키보드 같이 올라오는 버그 수정 4. searchbar 전체  선택

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -76,6 +76,7 @@
     <string name="notice">공지사항</string>
     <string name="available_class">수강 가능한 수업</string>
     <string name="proceeding_live">진행중인 강의</string>
+    <string name="emptyMessage">리스트가 비어있습니다 :)</string>
     <!-- 필터 끝 -->
 
 </resources>
