--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -81,4 +81,9 @@
     <string name="max_num">최대 수강인원</string>
     <!-- 필터 끝 -->
 
+    <string-array name="maxnum_array">
+        <item>1 명</item>
+        <item>2 명</item>
+        <item>3 명</item>
+    </string-array>
 </resources>
