S11P12D210-94 UI: 강의 업로드 UI 구현

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,7 +49,7 @@
     <string name="chapter_info">챕터의 소개를 작성하세요.</string>
     <string name="add_chapter">+챕터 추가+</string>
     <string name="click_thumbnail_info">클릭해서 썸네일을 추가하세요</string>
-    <string name="click_video_info">클릭해서 영상을 추가하세요</string>
+    <string name="click_video_info">영상을 등록하세요</string>
 
 
 
