화상강의 등록 페이지 UX 수정

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -82,6 +82,7 @@
     <string name="emptyMessage">리스트가 비어있습니다 :)</string>
     <string name="max_num">최대 수강인원</string>
     <string name="live_delete_msg">화상강의 일정이 삭제되었습니다.</string>
+    <string name="end_unlimit">종료일을 무기한으로 설정하시겠습니까?</string>
     <!-- 필터 끝 -->
 
     <string-array name="maxnum_array">
