S11P12D210-161 Feat: 스크롤뷰 아래 내용 가리는 에러 해결 및 사진 올리면 스크롤 아래로 설정

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,6 +35,7 @@
     <string name="content">내용</string>
     <string name="chapter">순서</string>
     <string name="add_photo"> 사진 추가하기</string>
+    <string name="delete_photo"> 사진 삭제하기</string>
     <string name="write_info">글을 작성하는 공간입니다.</string>
     <string name="logout">로그아웃</string>
 
