--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -78,7 +78,7 @@
     <string name="total">전체</string>
     <string name="one_to_one">1:1</string>
     <string name="one_to_multiple">1:多</string>
-    <string name="class_method">수업 방식</string>
+    <string name="class_method">수업 방식 선택</string>
     <string name="send">전송</string>
     <string name="notice">공지사항</string>
     <string name="available_class">수강 가능한 수업</string>
