S11P12D210-244 Feat : 강사 소개(content) 입력부 추가 및 입력 완료

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,6 +41,7 @@
     <string name="quit">회원 탈퇴</string>
     <string name="save">저장</string>
     <string name="hash_tag">해시 태그</string>
+    <string name="teacher_content">강사 50자 소개글</string>
 
     <string name="choose_week">가능 요일 선택</string>
     <string name="choose_date">날짜 선택</string>
