--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="password">비밀번호</string>
+    <string name="change_password">비밀번호 변경</string>
     <string name="id">ID</string>
     <string name="login">로그인</string>
     <string name="forgot_password">비밀번호를 잊으셨습니까?</string>
