S11P12D210-349 Feat: 녹화강의 시작 전 준비시간 5초

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -59,7 +59,7 @@
     <string name="click_video_info">클릭해서 영상을 추가하세요</string>
     <string name="notice_info">공지를 입력하세요</string>
     <string name="password_info">비밀번호를 입력하세요</string>
-
+    <string name="start_lecture">곧 강의가 시작됩니다\n준비하세요!</string>
 
     <!-- 필터 시작 -->
     <string name="align">정렬</string>
