--- a/exec/4. 시연 시나리오/시연 시나리오.md
+++ b/exec/4. 시연 시나리오/시연 시나리오.md
@@ -5,45 +5,40 @@
 
 ## 0. **로그인**과 회원가입을 한다.
 
-![로그인](https://file.notion.so/f/f/47458bc9-b90b-4f23-abec-0941f18a081b/7bf32f3a-c0f8-415b-b81c-1d95f32d0ab7/%EB%A1%9C%EA%B7%B8%EC%9D%B8.png?table=block&id=f92e38b4-464f-4ef0-9d5f-1673d21e98c6&spaceId=47458bc9-b90b-4f23-abec-0941f18a081b&expirationTimestamp=1723708800000&signature=flsNKBdndd7LNW4-t0JjblprJ65uqz7fKtJQzX34Phs&downloadName=%EB%A1%9C%EA%B7%B8%EC%9D%B8.png)
-
-![로그인-회원가입](https://file.notion.so/f/f/47458bc9-b90b-4f23-abec-0941f18a081b/74e6f691-5a3c-4502-b328-e542f2122104/%EB%A1%9C%EA%B7%B8%EC%9D%B8-%ED%9A%8C%EC%9B%90%EA%B0%80%EC%9E%85.png?table=block&id=5b5bf3ee-c2a5-4e95-936f-0d6bf13ac2cb&spaceId=47458bc9-b90b-4f23-abec-0941f18a081b&expirationTimestamp=1723708800000&signature=DDGQ9_bsxsuVC1_Xjl67RyE1Meg6rvlnq1Q36AlVY4g&downloadName=%EB%A1%9C%EA%B7%B8%EC%9D%B8-%ED%9A%8C%EC%9B%90%EA%B0%80%EC%9E%85.png)
+![로그인](./img/0_1.png)
+![로그인-회원가입](./img/0_2.png)
 
 ## 1. **홈 탭**에서는 화상강의 목록을 보거나, 입장할 수 있다.
 
-![홈.png](https://file.notion.so/f/f/47458bc9-b90b-4f23-abec-0941f18a081b/05e0e219-2f6d-4a5d-bf42-9547cd2d9cea/%ED%99%88.png?table=block&id=b7a1fc31-cd27-4e18-8224-98fed69f8262&spaceId=47458bc9-b90b-4f23-abec-0941f18a081b&expirationTimestamp=1723708800000&signature=Q58cIy55ZJQQ1KCSDZ0sZyyaae4OxBbQ5-RzUeSOKfY&downloadName=%ED%99%88.png)
-
-![홈-다이어로그.png](https://file.notion.so/f/f/47458bc9-b90b-4f23-abec-0941f18a081b/4e44c484-505f-460d-8d7a-fe6b01719f2b/%ED%99%88-%EB%8B%A4%EC%9D%B4%EC%96%B4%EB%A1%9C%EA%B7%B8.png?table=block&id=747e985c-1bca-4976-ba94-08379f2c3c4f&spaceId=47458bc9-b90b-4f23-abec-0941f18a081b&expirationTimestamp=1723708800000&signature=iX8LNbW-njy5hN2Ib0-F0O_vuk8IbNoYMGg3gpY_PvQ&downloadName=%ED%99%88-%EB%8B%A4%EC%9D%B4%EC%96%B4%EB%A1%9C%EA%B7%B8.png)
+![홈.png](./img/1_1.png)
+![홈-다이어로그.png](./img/1_2.png)
 
 ### 1-1. 화상강의 시작 10분 전에 푸시알람을 받을 수 있다.
 
-![Home-FCM.png](https://file.notion.so/f/f/47458bc9-b90b-4f23-abec-0941f18a081b/e5024d6e-398c-429b-9704-b2488ed329bf/Home-FCM.png?table=block&id=d8a0c0fb-312b-40bf-9722-93f777f623b8&spaceId=47458bc9-b90b-4f23-abec-0941f18a081b&expirationTimestamp=1723708800000&signature=X3Q99we_KoKSXUBGTwcX6ybuyT6iCVv8FHL5jCu1vqw&downloadName=Home-FCM.png)
+![Home-FCM.png](./img/1_1_1.png)
 
 ### 1-2. 다이어로그 입장하기 버튼을 누르면 화상강의를 시작할 수 있다.
 
-![홈-라이브.png](https://file.notion.so/f/f/47458bc9-b90b-4f23-abec-0941f18a081b/5dc4600f-11e2-481c-9121-dfa3477177f7/%ED%99%88-%EB%9D%BC%EC%9D%B4%EB%B8%8C.png?table=block&id=bbca36ef-b1bb-4605-bb04-e799d816e602&spaceId=47458bc9-b90b-4f23-abec-0941f18a081b&expirationTimestamp=1723708800000&signature=1ux0f3SMheh-TFVk1_a7Ms_TuZ6dtIOpY0N0VemWbxk&downloadName=%ED%99%88-%EB%9D%BC%EC%9D%B4%EB%B8%8C.png)
+![홈-라이브.png](./img/1_1_2.png)
 
 ## 2. **강사 탭**에서는 강사의 목록을 볼 수 있다.
 
-![강사.png](https://file.notion.so/f/f/47458bc9-b90b-4f23-abec-0941f18a081b/4ee58fd3-95e2-4911-93c9-218351e80db1/%EA%B0%95%EC%82%AC.png?table=block&id=c03d5b6e-ce65-44e6-83d8-31b7f588cfce&spaceId=47458bc9-b90b-4f23-abec-0941f18a081b&expirationTimestamp=1723708800000&signature=pzpyw7K0veAeXZQCs4nATfYDqFGvfXTe49Q23EnJilY&downloadName=%EA%B0%95%EC%82%AC.png)
+![강사.png](./img/2.png)
 
 ### 2-1. 필터로 원하는 조건의 강사를 찾는 검색이 가능하다.
 
-![강사-필터 전.png](https://file.notion.so/f/f/47458bc9-b90b-4f23-abec-0941f18a081b/de6de3a8-d8d6-4e11-b9e3-a53aee5ece8f/%EA%B0%95%EC%82%AC-%ED%95%84%ED%84%B0_%EC%A0%84.png?table=block&id=bf53227c-1590-4c30-8c82-a01d99a81f96&spaceId=47458bc9-b90b-4f23-abec-0941f18a081b&expirationTimestamp=1723708800000&signature=Xt8Ukd8Gsn6U0CP6uS4K3Eg7wFj2VpoLsSTyNEg6WCo&downloadName=%EA%B0%95%EC%82%AC-%ED%95%84%ED%84%B0+%EC%A0%84.png)
-
-![강사-필터-후.png](https://file.notion.so/f/f/47458bc9-b90b-4f23-abec-0941f18a081b/1c824b41-24b2-4a56-8ab4-1061d912a290/%EA%B0%95%EC%82%AC-%ED%95%84%ED%84%B0-%ED%9B%84.png?table=block&id=78e4d654-bd7c-46a9-b939-423b62598cc8&spaceId=47458bc9-b90b-4f23-abec-0941f18a081b&expirationTimestamp=1723708800000&signature=9Myf26GZxjc_2yDfzgNn1CjVB6koKbWedfzoJ_iBp0Q&downloadName=%EA%B0%95%EC%82%AC-%ED%95%84%ED%84%B0-%ED%9B%84.png)
+![강사-필터 전.png](./img/2_1_1.png)
+![강사-필터-후.png](./img/2_1_2.png)
 
 ### 2-2. 강사 목록을 클릭하면 강사의 상세 정보를 볼 수 있다. 또한 강사의 수업을 예약할 수 있다.
 
-![강사-디테일.png](https://file.notion.so/f/f/47458bc9-b90b-4f23-abec-0941f18a081b/e2b87e9a-e098-41ca-98ae-4e50a708927a/%EA%B0%95%EC%82%AC-%EB%94%94%ED%85%8C%EC%9D%BC.png?table=block&id=d650d224-f865-46fb-803d-213366c7dda9&spaceId=47458bc9-b90b-4f23-abec-0941f18a081b&expirationTimestamp=1723708800000&signature=AOYGsj6QXxBWJ_et8ICKm2gENFB6-diN1uV9XnLdQ7s&downloadName=%EA%B0%95%EC%82%AC-%EB%94%94%ED%85%8C%EC%9D%BC.png)
-
-![강사-예약.png](https://file.notion.so/f/f/47458bc9-b90b-4f23-abec-0941f18a081b/cef63ee6-d2e6-4bab-ba33-d2c91bb471ae/%EA%B0%95%EC%82%AC-%EC%98%88%EC%95%BD.png?table=block&id=f8add429-1a7d-4659-a8e8-a46a1bdc210c&spaceId=47458bc9-b90b-4f23-abec-0941f18a081b&expirationTimestamp=1723708800000&signature=15R6oyhNNcLtdMlMvurr1FuHB7q67uHK-iN5nN2969c&downloadName=%EA%B0%95%EC%82%AC-%EC%98%88%EC%95%BD.png)
+![강사-디테일.png](./img/2_2_1.png)
+![강사-예약.png](./img/2_2_2.png)
 
 ## 3. **강의 탭**에서는 3열 그리드 형식으로 강의 리스트를 볼 수 있고, 원하는 강의의 제목이나 내용을 검색해서 찾을 수 있다.
 
-![강의.png](https://file.notion.so/f/f/47458bc9-b90b-4f23-abec-0941f18a081b/721f3282-c7ed-41ad-af6e-bb25a3ba0055/%EA%B0%95%EC%9D%98.png?table=block&id=59091fb5-b993-4c3e-923f-b2b436e7767e&spaceId=47458bc9-b90b-4f23-abec-0941f18a081b&expirationTimestamp=1723708800000&signature=TpSFxtg75hRzHmkhihHgvzyV0ob_x2qml8fZYVCNoRM&downloadName=%EA%B0%95%EC%9D%98.png)
-
-![강의-검색.png](https://file.notion.so/f/f/47458bc9-b90b-4f23-abec-0941f18a081b/2d891a79-15d3-4ff9-bb0a-d7e7bbb5b3bd/%EA%B0%95%EC%9D%98-%EA%B2%80%EC%83%89.png?table=block&id=7aab43c6-448a-42df-a0c7-9158c7c4d1cb&spaceId=47458bc9-b90b-4f23-abec-0941f18a081b&expirationTimestamp=1723708800000&signature=NB-8z0dfchXcAuRryyVwH0Hlvi_qVATD5dnwOHTxPs8&downloadName=%EA%B0%95%EC%9D%98-%EA%B2%80%EC%83%89.png)
+![강의.png](./img/3_1.png)
+![강의-검색.png](./img/3_2.png)
 
 ### 3-1. 강의 목록을 클릭하면 강의의 상세 정보를 볼 수 있다.
 
