Update exec/4. 시연 시나리오/시연 시나리오.md

--- a/exec/4. 시연 시나리오/시연 시나리오.md
+++ b/exec/4. 시연 시나리오/시연 시나리오.md
@@ -42,11 +42,11 @@
 
 ### 3-1. 강의 목록을 클릭하면 강의의 상세 정보를 볼 수 있다.
 
-![강의-디테일.png](https://file.notion.so/f/f/47458bc9-b90b-4f23-abec-0941f18a081b/c3a37a2a-ccb8-4b79-85fc-0acc66ab9485/%EA%B0%95%EC%9D%98-%EB%94%94%ED%85%8C%EC%9D%BC.png?table=block&id=d11aa011-98ae-4edd-a6b1-6d04b5e7934a&spaceId=47458bc9-b90b-4f23-abec-0941f18a081b&expirationTimestamp=1723708800000&signature=2fVeiDGYin3EhpCdH0T4gvtJlDbumu9yExlw_AiWD2c&downloadName=%EA%B0%95%EC%9D%98-%EB%94%94%ED%85%8C%EC%9D%BC.png)
+![강의-디테일.png](./img/3_1_1.png)
 
 ### 3-2. 녹화 강의를 재생하면 수강생의 관절 위치를 표시하고, 각도 정확도에 따른 색깔을 보여준다.
 
-![제목 없음.png](https://file.notion.so/f/f/47458bc9-b90b-4f23-abec-0941f18a081b/5dff2bda-2324-4379-bef3-8e837529a8f6/%EC%A0%9C%EB%AA%A9_%EC%97%86%EC%9D%8C.png?table=block&id=16b49dd8-a641-4313-b05c-357ebea7fc52&spaceId=47458bc9-b90b-4f23-abec-0941f18a081b&expirationTimestamp=1723708800000&signature=2E4Vo5gs3b94wl6TqDAK-Jd3MrK-YrOyEffY2xumO5Q&downloadName=%EC%A0%9C%EB%AA%A9+%EC%97%86%EC%9D%8C.png)
+![제목 없음.png](./img/3_2_1.png)
 
 ## 4. **마이페이지 탭**에서는 강사일 경우 강의를 관리하고, 수강생의 경우 계정을 관리한다.
 
