Update exec/4. 시연 시나리오/img/4_4_2.png, exec/4. 시연 시나리오/img/4_4_1.png, exec/4. 시연 시나리오/img/4_3_2.png, exec/4. 시연 시나리오/img/4_5_1.png, exec/4. 시연 시나리오/img/4_5_2.png, exec/4. 시연 시나리오/img/4_6_1.png, exec/4. 시연 시나리오/img/4_1.png, exec/4. 시연 시나리오/img/4_1_1.png, exec/4. 시연 시나리오/img/4_1_2.png, exec/4. 시연 시나리오/img/4_2.png, exec/4. 시연 시나리오/img/4_2_2.png, exec/4. 시연 시나리오/img/4_2_1.png, exec/4. 시연 시나리오/img/4_3_1.png, exec/4. 시연 시나리오/시연 시나리오.md

--- a/exec/4. 시연 시나리오/시연 시나리오.md
+++ b/exec/4. 시연 시나리오/시연 시나리오.md
@@ -52,42 +52,37 @@
 
 ### **수강생**
 
-![마이페이지-student.png](https://file.notion.so/f/f/47458bc9-b90b-4f23-abec-0941f18a081b/07139504-6498-4fb9-9ca9-6a5d6ad559a1/%EB%A7%88%EC%9D%B4%ED%8E%98%EC%9D%B4%EC%A7%80-student.png?table=block&id=efadef91-bedf-4e46-867a-fc721be49051&spaceId=47458bc9-b90b-4f23-abec-0941f18a081b&expirationTimestamp=1723708800000&signature=k7OBLDJwoLU-DzPCR2KWwea0f8Jpwj5aN_BZ6FHTyas&downloadName=%EB%A7%88%EC%9D%B4%ED%8E%98%EC%9D%B4%EC%A7%80-student.png)
+![마이페이지-student.png](./img/4_1.png)
 
 ### **강사**
 
-![마이페이지.png](https://file.notion.so/f/f/47458bc9-b90b-4f23-abec-0941f18a081b/3e331488-bff3-4769-a8b1-62c98e33dfb4/%EB%A7%88%EC%9D%B4%ED%8E%98%EC%9D%B4%EC%A7%80.png?table=block&id=1fe0f5ce-5d4b-4b0b-9971-9a1f1789bfcf&spaceId=47458bc9-b90b-4f23-abec-0941f18a081b&expirationTimestamp=1723708800000&signature=N0_lomJkVQa0EXakG4sOvrsv9xZBnfRJnE8RagKQZRo&downloadName=%EB%A7%88%EC%9D%B4%ED%8E%98%EC%9D%B4%EC%A7%80.png)
+![마이페이지.png](./img/4_2.png)
 
 ### 4-1. (공용) 마이페이지에서 자신이 좋아요한 강사와 강의를 볼 수 있다.
 
-![마이페이지-1.png](https://file.notion.so/f/f/47458bc9-b90b-4f23-abec-0941f18a081b/bcd7dbd9-4ba8-4f1b-874f-077b1cf24488/%EB%A7%88%EC%9D%B4%ED%8E%98%EC%9D%B4%EC%A7%80-1.png?table=block&id=a1c93b37-1025-4d88-a948-412ccf9e7f26&spaceId=47458bc9-b90b-4f23-abec-0941f18a081b&expirationTimestamp=1723708800000&signature=nbDUittVnO2MXf8IO-a_CxYK27O9cLRXHmHgMbtL9jY&downloadName=%EB%A7%88%EC%9D%B4%ED%8E%98%EC%9D%B4%EC%A7%80-1.png)
-
-![마이페이지-2.png](https://file.notion.so/f/f/47458bc9-b90b-4f23-abec-0941f18a081b/1b2ffbf2-5169-4a14-a731-3f37fb7e40b7/%EB%A7%88%EC%9D%B4%ED%8E%98%EC%9D%B4%EC%A7%80-2.png?table=block&id=12d90bee-2cfb-4b2a-86c3-d24350087e77&spaceId=47458bc9-b90b-4f23-abec-0941f18a081b&expirationTimestamp=1723708800000&signature=rXMaCUtLxaqksDhVsBCFc1LIxAiEjdzvuhR4XauZQS0&downloadName=%EB%A7%88%EC%9D%B4%ED%8E%98%EC%9D%B4%EC%A7%80-2.png)
+![마이페이지-1.png](./img/4_1_1.png)
+![마이페이지-2.png](./img/4_1_2.png)
 
 ### 4-2. (공용) 마이페이지에서 자신이 수강한 화상강의 내역을 볼 수 있고, 내 정보를 수정할 수 있다. 
 
-![마이페이지-3.png](https://file.notion.so/f/f/47458bc9-b90b-4f23-abec-0941f18a081b/2d635092-7953-4399-8294-0691f4ac33a2/%EB%A7%88%EC%9D%B4%ED%8E%98%EC%9D%B4%EC%A7%80-3.png?table=block&id=232e1423-2773-49ba-95b0-877dee529929&spaceId=47458bc9-b90b-4f23-abec-0941f18a081b&expirationTimestamp=1723708800000&signature=l5NYE8K_-CkbnAc9ywAtj5jEYAX67Om6ir3MrZ48Cuk&downloadName=%EB%A7%88%EC%9D%B4%ED%8E%98%EC%9D%B4%EC%A7%80-3.png)
-
-![마이페이지-4.png](https://file.notion.so/f/f/47458bc9-b90b-4f23-abec-0941f18a081b/fef94b80-9c23-499b-a0ec-63e7fadcafc1/%EB%A7%88%EC%9D%B4%ED%8E%98%EC%9D%B4%EC%A7%80-4.png?table=block&id=f53f3205-d1c4-4cc0-91b5-881148988778&spaceId=47458bc9-b90b-4f23-abec-0941f18a081b&expirationTimestamp=1723708800000&signature=XSHHlSr_WVKYSmeKfGD3E33mLI1t0iaSVLLCUzlbEfo&downloadName=%EB%A7%88%EC%9D%B4%ED%8E%98%EC%9D%B4%EC%A7%80-4.png)
+![마이페이지-3.png](./img/4_2_1.png)
+![마이페이지-4.png](./img/4_2_2.png)
 
 ### 4-3. (강사 전용) 녹화 강의를 관리(생성, 수정, 삭제)할 수 있다.
 
-![마이페이지-5.png](https://file.notion.so/f/f/47458bc9-b90b-4f23-abec-0941f18a081b/35b7de1d-0144-4138-a929-b1e63861255c/%EB%A7%88%EC%9D%B4%ED%8E%98%EC%9D%B4%EC%A7%80-5.png?table=block&id=d31c0e76-520d-46c8-bb70-cc8aeceb8dc2&spaceId=47458bc9-b90b-4f23-abec-0941f18a081b&expirationTimestamp=1723708800000&signature=WnMsf-HkCVPUyh6s9wZDYwXxgE7LnU0U_ZhoTzWF1vI&downloadName=%EB%A7%88%EC%9D%B4%ED%8E%98%EC%9D%B4%EC%A7%80-5.png)
-
-![마이페이지-5-1.png](https://file.notion.so/f/f/47458bc9-b90b-4f23-abec-0941f18a081b/0e62e8ed-b321-47d7-9912-1216171a4ece/%EB%A7%88%EC%9D%B4%ED%8E%98%EC%9D%B4%EC%A7%80-5-1.png?table=block&id=3dcb36d2-a70b-4e16-a1a3-00a5603d8443&spaceId=47458bc9-b90b-4f23-abec-0941f18a081b&expirationTimestamp=1723708800000&signature=zP7GhcyNWTegzKycnqN4YoK2EFOXNgbXrDP6O22TYzM&downloadName=%EB%A7%88%EC%9D%B4%ED%8E%98%EC%9D%B4%EC%A7%80-5-1.png)
+![마이페이지-5.png](./img/4_3_1.png)
+![마이페이지-5-1.png](./img/4_3_2.png)
 
 ### 4-4. (강사 전용) 화상 관리 일정을 관리(생성, 수정, 삭제)할 수 있다.
 
-![마이페이지-6.png](https://file.notion.so/f/f/47458bc9-b90b-4f23-abec-0941f18a081b/eb4747d8-ac74-4588-babd-5813a8df1edd/%EB%A7%88%EC%9D%B4%ED%8E%98%EC%9D%B4%EC%A7%80-6.png?table=block&id=cb4ac841-7d0c-48b1-9073-74167eb1ccee&spaceId=47458bc9-b90b-4f23-abec-0941f18a081b&expirationTimestamp=1723708800000&signature=-0mwF5uOwgqnJzslZTcW2X_bj8f3P9C3F2X-aFbRp5c&downloadName=%EB%A7%88%EC%9D%B4%ED%8E%98%EC%9D%B4%EC%A7%80-6.png)
-
-![마이페이지-6-1.png](https://file.notion.so/f/f/47458bc9-b90b-4f23-abec-0941f18a081b/e5bc30c7-16e1-4ddf-ba18-db10f843df25/%EB%A7%88%EC%9D%B4%ED%8E%98%EC%9D%B4%EC%A7%80-6-1.png?table=block&id=590117b4-4b76-4c17-8618-945ffd9de0ec&spaceId=47458bc9-b90b-4f23-abec-0941f18a081b&expirationTimestamp=1723708800000&signature=hBH-pz72ub3guwzDc8wD_p8y2gb8DpMFAgO4kX6GIUw&downloadName=%EB%A7%88%EC%9D%B4%ED%8E%98%EC%9D%B4%EC%A7%80-6-1.png)
+![마이페이지-6.png](./img/4_4_1.png)
+![마이페이지-6-1.png](./img/4_4_2.png)
 
 ### 4-5. (강사 전용) 공지를 관리(생성, 수정, 삭제)할 수 있다
 
-![마이페이지-7.png](https://file.notion.so/f/f/47458bc9-b90b-4f23-abec-0941f18a081b/b6d24293-4b97-4143-89b0-4601a9be42ca/%EB%A7%88%EC%9D%B4%ED%8E%98%EC%9D%B4%EC%A7%80-7.png?table=block&id=08068e66-b1eb-4688-9572-049070fb365e&spaceId=47458bc9-b90b-4f23-abec-0941f18a081b&expirationTimestamp=1723708800000&signature=DbgQYdMN9-Hsf2Lw-cU-MSSdTL9X0nwF7NcssHjFuFs&downloadName=%EB%A7%88%EC%9D%B4%ED%8E%98%EC%9D%B4%EC%A7%80-7.png)
-
-![마이페이지-7-1.png](https://file.notion.so/f/f/47458bc9-b90b-4f23-abec-0941f18a081b/b76a2ac2-d839-4295-a45a-605652210487/%EB%A7%88%EC%9D%B4%ED%8E%98%EC%9D%B4%EC%A7%80-7-1.png?table=block&id=0f004f31-bc31-47a5-87b8-5152080838e2&spaceId=47458bc9-b90b-4f23-abec-0941f18a081b&expirationTimestamp=1723708800000&signature=XJ7o298cvOmuyvunbOs06KY56b-KuYnwcFj8kAuogFc&downloadName=%EB%A7%88%EC%9D%B4%ED%8E%98%EC%9D%B4%EC%A7%80-7-1.png)
+![마이페이지-7.png](./img/4_5_1.png)
+![마이페이지-7-1.png](./img/4_5_2.png)
 
 ### 4-6. (공용) 로그아웃 및 회원탈퇴를 할 수 있다.
 
-![공용-8.png](https://file.notion.so/f/f/47458bc9-b90b-4f23-abec-0941f18a081b/eec30cbb-6f04-4abc-b8cd-bf2ab9990860/Screenshot_20240814_145116.png?table=block&id=a2e759a6-fa90-4b45-ad6e-f7ae965cb2df&spaceId=47458bc9-b90b-4f23-abec-0941f18a081b&expirationTimestamp=1723708800000&signature=AUaXhdHEI3mqxWYw8whA9PycJ10-XkYPe0t26977m5I&downloadName=Screenshot_20240814_145116.png)
+![공용-8.png](./img/4_6_1.png)
